deploy-kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: thefakesite-pod
  labels:
    name: thefakesite
    app: thefakesite
spec:
  containers:
    - name: thefakesite
      image: pearlyna/thefakesite:main
      resources:
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 8000
      securityContext:
        runAsUser: 4000
---
apiVersion: v1
kind: Pod
metadata:
  name: thefakeapi-pod
  labels:
    name: thefakeapi
    app: thefakeapi
spec:
  containers:
    - name: thefakeapi
      image: pearlyna/thefakeapi:main
      resources:
        limits:
          memory: "200Mi"
          cpu: "500m"
      ports:
        - containerPort: 3000
      livenessProbe:
        httpGet:
          path: /thefakeapi
          port: 3000
        periodSeconds: 30
      securityContext:
        runAsUser: 4000
---
apiVersion: v1
kind: Pod
metadata:
  name: mongodb-pod
  labels:
    name: mongodb
    app: mongodb
spec:
  containers:
    - name: mongodb
      image: mongodb/mongodb-community-server
      resources:
        limits:
          memory: "500Mi"
          cpu: "1"
      ports:
        - containerPort: 27017
