deploy-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: thefakesite-service
  namespace: default
spec:
  selector:
    app: thefakesite
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: thefakeapi-service
  namespace: default
spec:
  selector:
    app: thefakeapi
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
