deploy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: thefakeapi-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    # - host: localhost
    -  http:
        paths:
          - path: /thefakeapi
            pathType: Prefix
            backend:
              service:
                name: thefakeapi-service
                port: 
                  number: 3000
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: thefakesite-service
                port:
                  number: 8000
          - path: /openapi.json
            pathType: ImplementationSpecific
            backend:
              service:
                name: thefakesite-service
                port:
                  number: 8000
