service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: thefakeapi-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /thefakeapi
            pathType: Prefix
            backend:
              service:
                name: thefakeapi-service
                port: 
                  number: 80
---
# apiVersion: v1
# kind: Secret
# metadata: ...
# data: ...
# immutable: true
# env[].valueFrom.secretKeyRef
# ---
apiVersion: v1
kind: Service
metadata:
  name: thefakeapi-service
  namespace: default
spec:
  selector:
    app: thefakeapi
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: default
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
